# engram-mcp

./: BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  design.md
.github/workflows/: ci.yml  release.yml
benches/: context_bench.rs  embedding_bench.rs  handoff_bench.rs  query_bench.rs  scoring_bench.rs
benches/common/: mod.rs
benchmarks/longmemeval/: README.md  RESULTS.md
benchmarks/longmemeval/results/: .gitignore
benchmarks/longmemeval/src/: dataset.rs  ingest.rs  main.rs  metrics.rs  report.rs  runner.rs  setup.rs
hooks/: README.md
hooks/fixtures/: post_tool_use_failure.json  pre_compact.json  session_end.json  stop.json  subagent_stop.json  user_prompt_submit.json
scripts/: engram-hook.sh  engram-prompt-hook.sh  fetch-longmemeval.sh  install-skills.sh  port_md_handoffs.py
skills/handoff/: SKILL.md
skills/read-handoffs/: SKILL.md
src/: adr_export.rs  cache.rs  cli.rs  db.rs  decay.rs  embedding.rs  error.rs  export.rs  format.rs  instructions.md  lib.rs  main.rs  memory.rs  summarize.rs  tools.rs
src/db/: adrs.rs  batch.rs  clusters.rs  embeddings.rs  handoffs.rs  memories.rs  migrations.rs  mod.rs  relationships.rs  tests.rs  util.rs
src/hooks/: dispatch.rs  filter.rs  install.rs  mod.rs  payload.rs  redact.rs  transcript.rs
src/prompts/: handoff.md  resume.md
src/tools/: adr.rs  handler.rs  handoff.rs  mod.rs  schemas.rs  scoring.rs  store.rs  test_utils.rs
tests/: bench_retrieval.rs  cli_handoff.rs  contradiction_filter.rs  decay_production_path.rs  e2e.rs  external_artifacts.rs  handoff_flow.rs  handoff_resume_diversity.rs  hooks_dispatch.rs  hooks_dispatch_unit.rs  hooks_install.rs  integration.rs  longmemeval_ingest_bypass.rs  memory_context_hybrid.rs  retrieval_quality.rs  search_mode.rs  tool_profile.rs
