[package]
name = "engram_mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "engram"
path = "src/main.rs"

[[bin]]
name = "engram-cli"
path = "src/cli.rs"

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "transport-io"] }
tokio = { version = "1.49", features = ["full"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
fastembed = "5"
thiserror = "2.0"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
tempfile = "3.24"
